--- a/builder/pom.xml
+++ b/builder/pom.xml
@@ -21,5 +21,25 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+    </dependency>
   </dependencies>
+
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>2.5.1</version>
+              <configuration>
+                  <verbose>true</verbose>
+                  <compilerVersion>1.6</compilerVersion>
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
+
 </project>
